Fixed padding for scrollbar

--- a/docs/site/css/docs.scss
+++ b/docs/site/css/docs.scss
@@ -354,7 +354,7 @@
     justify-content: flex-start;
     overflow-x: hidden;
     overflow-y: auto;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 .sidebar__item {
